# opentia

./: .gitignore  CLAUDE.md  LICENSE  README.md  _tia_selftest.py  assess_impact.py  prompt.md  pyproject.toml
.github/workflows/: publish.yml
android-app/: build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/feature/checkout/: build.gradle.kts
android-app/gradle/: libs.versions.toml
collision-app/AppA/Core/: Calculator.cs
collision-app/AppA/Core.Tests/: CalculatorTests.cs
collision-app/AppB/Core/: Widget.cs
collision-app/AppB/Core.Tests/: AppB.Core.Tests.csproj  WidgetTests.cs
gradle-nested/workspace/: gradlew  gradlew.bat  settings.gradle.kts
gradle-nested/workspace/libb/: build.gradle.kts
java-collision-app/appa/core/: pom.xml
java-collision-app/appa/services/: pom.xml
java-collision-app/appb/core/: pom.xml
java-collision-app/appb/services/: pom.xml
java-fullstack-app/: pom.xml
java-fullstack-app/backend/: pom.xml
java-fullstack-app/domain/: pom.xml
java-fullstack-app/frontend/: package.json
java-multi-app/: pom.xml
java-multi-app/batch/: pom.xml
java-multi-app/core/: pom.xml
java-multi-app/infrastructure/: pom.xml
java-multi-app/services/: pom.xml
java-sample-app/: pom.xml
multi-app/: MultiApp.sln  shared-config.json
multi-app/src/MultiApp.Application/: MultiApp.Application.csproj  Resources.resx  appsettings.json
multi-app/src/MultiApp.Batch/: MultiApp.Batch.csproj  batch-config.yaml
multi-app/src/MultiApp.Domain/: domain-rules.xml
multi-app/src/MultiApp.Infrastructure/: logging.json
multi-app/tests/MultiApp.Application.Tests/: MultiApp.Application.Tests.csproj  OrderServiceTests.cs
multi-app/tests/MultiApp.Batch.Tests/: MultiApp.Batch.Tests.csproj  OrderExpiryJobTests.cs
multi-app/tests/MultiApp.Domain.Tests/: MultiApp.Domain.Tests.csproj  OrderDomainServiceTests.cs  OrderTests.cs
multi-app/tests/MultiApp.Infrastructure.Tests/: InMemoryOrderRepositoryTests.cs  MultiApp.Infrastructure.Tests.csproj
node-mono-app/: package.json
node-plain-mono/: package.json
node-sample-app/: package.json
node-sample-app/src/: product.service.test.ts  product.service.ts  product.test.ts  product.ts
sample-app/: SampleApp.sln
sample-app/src/SampleApp.Api/: SampleApp.Api.csproj
sample-app/src/SampleApp.Services/: InventoryService.cs  OrderService.cs  PricingService.cs  ProductService.cs  SampleApp.Services.csproj  (+1 more)
(+82 files in other folders)
