[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opentia"
version = "1.0.4"
description = "Test Impact Analysis for C# / .NET — selects only tests affected by a git diff. Java and Node.js support planned."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "byterey", email = "byterey@gmail.com"},
]
keywords = ["testing", "test-impact-analysis", "dotnet", "csharp", "java", "nodejs", "tia"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
opentia = "assess_impact:main"

[tool.setuptools]
py-modules = ["assess_impact"]
